<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/llActionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
        <include
            layout="@layout/include_space_actionbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_below="@+id/lltop"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibtnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_back"/>

            <com.hoangsong.zumechat.view.CustomEditText
                android:id="@+id/txtSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/padding_M"
                android:minHeight="@dimen/editext_height"
                android:layout_marginLeft="@dimen/padding_L"
                android:layout_marginRight="@dimen/padding_L"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/size_S"
                android:hint="@string/hint_search"
                android:drawableRight="@drawable/ic_search_white"
                android:drawablePadding="@dimen/padding_S"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionSearch"
                app:customTypeface="@string/font_semibold" />

        </LinearLayout>

    </LinearLayout>

    <com.hoangsong.zumechat.view.EndlessListView
        android:id="@+id/lvMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llActionbar"
        android:divider="@color/light_grey_01"
        android:dividerHeight="@dimen/space_height_small_small"
        android:listSelector="@android:color/transparent"
        tool:listitem="@layout/item_list_base"/>

    <TextView
        android:id="@+id/tvFromEmpty"
        style="@style/tvBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/lbl_empty"/>

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/white"
        android:paddingTop="@dimen/space_height_small_small"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            style="@style/btnYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"/>
        <TextView
            android:layout_width="@dimen/space_height_small_small"
            android:layout_height="match_parent"
            android:background="@color/white"/>
        <Button
            android:id="@+id/btnDelete"
            style="@style/btnYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_delete"/>
    </LinearLayout>


</RelativeLayout>